--- a/Durak/appsettings.json
+++ b/Durak/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Durak-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "GoogleServices": {
+    "ClientID": "ClientID",
+    "Secret": "ClientSecret"
+  },
+  "SendGridKey": "SendGridAPIKey",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
